Practica2/fuente/gParamParser.java
package fuente;

// Generated from gParamParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gParamParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_JSON=1, KW_DOT=2, KW_SVG=3, KW_CSV=4, KW_LEN=5, KW_FONTCOLOR=6, KW_FONTNAME=7, 
		KW_FONTSIZE=8, KW_ARROWSIZE=9, KW_ARROWCOLOR=10, KW_PENWIDTH=11, KW_FILLCOLOR=12, 
		KW_STYLE=13, KW_SHAPE=14, KW_EDGE=15, KW_NODE=16, KW_RELA=17, KW_CLASS=18, 
		KW_PROP=19, KW_INHE=20, KW_INDI=21, S_IGUAL=22, S_GUIONB=23, S_COMILLAS=24, 
		ENTERO=25, INTRO=26, WS=27, TEXTOCON=28, TEXTOSIN=29;
	public static final int
		RULE_parametros = 0, RULE_ficheros = 1, RULE_param = 2, RULE_len = 3, 
		RULE_fontcolor = 4, RULE_fontname = 5, RULE_fontsize = 6, RULE_arrowsize = 7, 
		RULE_arrowcolor = 8, RULE_penwidth = 9, RULE_fillcolor = 10, RULE_style = 11, 
		RULE_shape = 12, RULE_json = 13, RULE_dot = 14, RULE_svg = 15, RULE_csv = 16, 
		RULE_w_json = 17, RULE_w_dot = 18, RULE_w_svg = 19, RULE_w_csv = 20, RULE_w_len = 21, 
		RULE_w_fontcolor = 22, RULE_w_fontname = 23, RULE_w_fontsize = 24, RULE_w_arrowsize = 25, 
		RULE_w_arrowcolor = 26, RULE_w_penwidth = 27, RULE_w_fillcolor = 28, RULE_w_style = 29, 
		RULE_w_shape = 30, RULE_edno = 31, RULE_edge = 32, RULE_node = 33, RULE_igual = 34, 
		RULE_guionb = 35, RULE_cadena = 36, RULE_entero = 37, RULE_w_rela = 38, 
		RULE_w_class = 39, RULE_w_prop = 40, RULE_w_inhe = 41, RULE_w_indi = 42, 
		RULE_elemento = 43, RULE_ruta = 44, RULE_ws = 45;
	public static final String[] ruleNames = {
		"parametros", "ficheros", "param", "len", "fontcolor", "fontname", "fontsize", 
		"arrowsize", "arrowcolor", "penwidth", "fillcolor", "style", "shape", 
		"json", "dot", "svg", "csv", "w_json", "w_dot", "w_svg", "w_csv", "w_len", 
		"w_fontcolor", "w_fontname", "w_fontsize", "w_arrowsize", "w_arrowcolor", 
		"w_penwidth", "w_fillcolor", "w_style", "w_shape", "edno", "edge", "node", 
		"igual", "guionb", "cadena", "entero", "w_rela", "w_class", "w_prop", 
		"w_inhe", "w_indi", "elemento", "ruta", "ws"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'-JSON'", "'-DOT'", "'-SVG'", "'-CSV'", "'-len'", "'-fontcolor'", 
		"'-fontname'", "'-fontsize'", "'-arrowsize'", "'-arrowcolor'", "'-penwidth'", 
		"'-fillcolor'", "'-style'", "'-shape'", "'edge'", "'node'", "'relationship'", 
		"'class'", "'property'", "'inheritance'", "'indirect_use'", "'='", "'_'", 
		"'\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "KW_JSON", "KW_DOT", "KW_SVG", "KW_CSV", "KW_LEN", "KW_FONTCOLOR", 
		"KW_FONTNAME", "KW_FONTSIZE", "KW_ARROWSIZE", "KW_ARROWCOLOR", "KW_PENWIDTH", 
		"KW_FILLCOLOR", "KW_STYLE", "KW_SHAPE", "KW_EDGE", "KW_NODE", "KW_RELA", 
		"KW_CLASS", "KW_PROP", "KW_INHE", "KW_INDI", "S_IGUAL", "S_GUIONB", "S_COMILLAS", 
		"ENTERO", "INTRO", "WS", "TEXTOCON", "TEXTOSIN"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gParamParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gParamParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParametrosContext extends ParserRuleContext {
		public FicherosContext ficheros() {
			return getRuleContext(FicherosContext.class,0);
		}
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitParametros(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parametros);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			ficheros();
			setState(93);
			param();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FicherosContext extends ParserRuleContext {
		public List<JsonContext> json() {
			return getRuleContexts(JsonContext.class);
		}
		public JsonContext json(int i) {
			return getRuleContext(JsonContext.class,i);
		}
		public List<DotContext> dot() {
			return getRuleContexts(DotContext.class);
		}
		public DotContext dot(int i) {
			return getRuleContext(DotContext.class,i);
		}
		public List<SvgContext> svg() {
			return getRuleContexts(SvgContext.class);
		}
		public SvgContext svg(int i) {
			return getRuleContext(SvgContext.class,i);
		}
		public List<WsContext> ws() {
			return getRuleContexts(WsContext.class);
		}
		public WsContext ws(int i) {
			return getRuleContext(WsContext.class,i);
		}
		public List<CsvContext> csv() {
			return getRuleContexts(CsvContext.class);
		}
		public CsvContext csv(int i) {
			return getRuleContext(CsvContext.class,i);
		}
		public FicherosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ficheros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterFicheros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitFicheros(this);
		}
	}

	public final FicherosContext ficheros() throws RecognitionException {
		FicherosContext _localctx = new FicherosContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ficheros);
		int _la;
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case KW_JSON:
			case KW_DOT:
			case KW_SVG:
			case KW_LEN:
			case KW_FONTCOLOR:
			case KW_FONTNAME:
			case KW_FONTSIZE:
			case KW_ARROWSIZE:
			case KW_ARROWCOLOR:
			case KW_PENWIDTH:
			case KW_FILLCOLOR:
			case KW_STYLE:
			case KW_SHAPE:
			case WS:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_JSON) | (1L << KW_DOT) | (1L << KW_SVG) | (1L << WS))) != 0)) {
					{
					setState(99);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case KW_JSON:
						{
						setState(95);
						json();
						}
						break;
					case KW_DOT:
						{
						setState(96);
						dot();
						}
						break;
					case KW_SVG:
						{
						setState(97);
						svg();
						}
						break;
					case WS:
						{
						setState(98);
						ws();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case KW_CSV:
				enterOuterAlt(_localctx, 2);
				{
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(104);
					csv();
					}
					}
					setState(107); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==KW_CSV );
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(109);
					ws();
					}
					}
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public List<LenContext> len() {
			return getRuleContexts(LenContext.class);
		}
		public LenContext len(int i) {
			return getRuleContext(LenContext.class,i);
		}
		public List<FontcolorContext> fontcolor() {
			return getRuleContexts(FontcolorContext.class);
		}
		public FontcolorContext fontcolor(int i) {
			return getRuleContext(FontcolorContext.class,i);
		}
		public List<FontnameContext> fontname() {
			return getRuleContexts(FontnameContext.class);
		}
		public FontnameContext fontname(int i) {
			return getRuleContext(FontnameContext.class,i);
		}
		public List<FontsizeContext> fontsize() {
			return getRuleContexts(FontsizeContext.class);
		}
		public FontsizeContext fontsize(int i) {
			return getRuleContext(FontsizeContext.class,i);
		}
		public List<ArrowsizeContext> arrowsize() {
			return getRuleContexts(ArrowsizeContext.class);
		}
		public ArrowsizeContext arrowsize(int i) {
			return getRuleContext(ArrowsizeContext.class,i);
		}
		public List<ArrowcolorContext> arrowcolor() {
			return getRuleContexts(ArrowcolorContext.class);
		}
		public ArrowcolorContext arrowcolor(int i) {
			return getRuleContext(ArrowcolorContext.class,i);
		}
		public List<PenwidthContext> penwidth() {
			return getRuleContexts(PenwidthContext.class);
		}
		public PenwidthContext penwidth(int i) {
			return getRuleContext(PenwidthContext.class,i);
		}
		public List<FillcolorContext> fillcolor() {
			return getRuleContexts(FillcolorContext.class);
		}
		public FillcolorContext fillcolor(int i) {
			return getRuleContext(FillcolorContext.class,i);
		}
		public List<StyleContext> style() {
			return getRuleContexts(StyleContext.class);
		}
		public StyleContext style(int i) {
			return getRuleContext(StyleContext.class,i);
		}
		public List<ShapeContext> shape() {
			return getRuleContexts(ShapeContext.class);
		}
		public ShapeContext shape(int i) {
			return getRuleContext(ShapeContext.class,i);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_LEN) | (1L << KW_FONTCOLOR) | (1L << KW_FONTNAME) | (1L << KW_FONTSIZE) | (1L << KW_ARROWSIZE) | (1L << KW_ARROWCOLOR) | (1L << KW_PENWIDTH) | (1L << KW_FILLCOLOR) | (1L << KW_STYLE) | (1L << KW_SHAPE))) != 0)) {
				{
				setState(127);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case KW_LEN:
					{
					setState(117);
					len();
					}
					break;
				case KW_FONTCOLOR:
					{
					setState(118);
					fontcolor();
					}
					break;
				case KW_FONTNAME:
					{
					setState(119);
					fontname();
					}
					break;
				case KW_FONTSIZE:
					{
					setState(120);
					fontsize();
					}
					break;
				case KW_ARROWSIZE:
					{
					setState(121);
					arrowsize();
					}
					break;
				case KW_ARROWCOLOR:
					{
					setState(122);
					arrowcolor();
					}
					break;
				case KW_PENWIDTH:
					{
					setState(123);
					penwidth();
					}
					break;
				case KW_FILLCOLOR:
					{
					setState(124);
					fillcolor();
					}
					break;
				case KW_STYLE:
					{
					setState(125);
					style();
					}
					break;
				case KW_SHAPE:
					{
					setState(126);
					shape();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LenContext extends ParserRuleContext {
		public W_lenContext w_len() {
			return getRuleContext(W_lenContext.class,0);
		}
		public GuionbContext guionb() {
			return getRuleContext(GuionbContext.class,0);
		}
		public ElementoContext elemento() {
			return getRuleContext(ElementoContext.class,0);
		}
		public IgualContext igual() {
			return getRuleContext(IgualContext.class,0);
		}
		public EnteroContext entero() {
			return getRuleContext(EnteroContext.class,0);
		}
		public LenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_len; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterLen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitLen(this);
		}
	}

	public final LenContext len() throws RecognitionException {
		LenContext _localctx = new LenContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_len);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			w_len();
			setState(133);
			guionb();
			setState(134);
			elemento();
			setState(135);
			igual();
			setState(136);
			entero();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FontcolorContext extends ParserRuleContext {
		public W_fontcolorContext w_fontcolor() {
			return getRuleContext(W_fontcolorContext.class,0);
		}
		public List<GuionbContext> guionb() {
			return getRuleContexts(GuionbContext.class);
		}
		public GuionbContext guionb(int i) {
			return getRuleContext(GuionbContext.class,i);
		}
		public EdnoContext edno() {
			return getRuleContext(EdnoContext.class,0);
		}
		public ElementoContext elemento() {
			return getRuleContext(ElementoContext.class,0);
		}
		public IgualContext igual() {
			return getRuleContext(IgualContext.class,0);
		}
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public FontcolorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fontcolor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterFontcolor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitFontcolor(this);
		}
	}

	public final FontcolorContext fontcolor() throws RecognitionException {
		FontcolorContext _localctx = new FontcolorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fontcolor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			w_fontcolor();
			setState(139);
			guionb();
			setState(140);
			edno();
			setState(141);
			guionb();
			setState(142);
			elemento();
			setState(143);
			igual();
			setState(144);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FontnameContext extends ParserRuleContext {
		public W_fontnameContext w_fontname() {
			return getRuleContext(W_fontnameContext.class,0);
		}
		public List<GuionbContext> guionb() {
			return getRuleContexts(GuionbContext.class);
		}
		public GuionbContext guionb(int i) {
			return getRuleContext(GuionbContext.class,i);
		}
		public EdnoContext edno() {
			return getRuleContext(EdnoContext.class,0);
		}
		public ElementoContext elemento() {
			return getRuleContext(ElementoContext.class,0);
		}
		public IgualContext igual() {
			return getRuleContext(IgualContext.class,0);
		}
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public FontnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fontname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterFontname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitFontname(this);
		}
	}

	public final FontnameContext fontname() throws RecognitionException {
		FontnameContext _localctx = new FontnameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fontname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			w_fontname();
			setState(147);
			guionb();
			setState(148);
			edno();
			setState(149);
			guionb();
			setState(150);
			elemento();
			setState(151);
			igual();
			setState(152);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FontsizeContext extends ParserRuleContext {
		public W_fontsizeContext w_fontsize() {
			return getRuleContext(W_fontsizeContext.class,0);
		}
		public List<GuionbContext> guionb() {
			return getRuleContexts(GuionbContext.class);
		}
		public GuionbContext guionb(int i) {
			return getRuleContext(GuionbContext.class,i);
		}
		public EdnoContext edno() {
			return getRuleContext(EdnoContext.class,0);
		}
		public ElementoContext elemento() {
			return getRuleContext(ElementoContext.class,0);
		}
		public IgualContext igual() {
			return getRuleContext(IgualContext.class,0);
		}
		public EnteroContext entero() {
			return getRuleContext(EnteroContext.class,0);
		}
		public FontsizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fontsize; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterFontsize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitFontsize(this);
		}
	}

	public final FontsizeContext fontsize() throws RecognitionException {
		FontsizeContext _localctx = new FontsizeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fontsize);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			w_fontsize();
			setState(155);
			guionb();
			setState(156);
			edno();
			setState(157);
			guionb();
			setState(158);
			elemento();
			setState(159);
			igual();
			setState(160);
			entero();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrowsizeContext extends ParserRuleContext {
		public W_arrowsizeContext w_arrowsize() {
			return getRuleContext(W_arrowsizeContext.class,0);
		}
		public List<GuionbContext> guionb() {
			return getRuleContexts(GuionbContext.class);
		}
		public GuionbContext guionb(int i) {
			return getRuleContext(GuionbContext.class,i);
		}
		public EdnoContext edno() {
			return getRuleContext(EdnoContext.class,0);
		}
		public ElementoContext elemento() {
			return getRuleContext(ElementoContext.class,0);
		}
		public IgualContext igual() {
			return getRuleContext(IgualContext.class,0);
		}
		public EnteroContext entero() {
			return getRuleContext(EnteroContext.class,0);
		}
		public ArrowsizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrowsize; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterArrowsize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitArrowsize(this);
		}
	}

	public final ArrowsizeContext arrowsize() throws RecognitionException {
		ArrowsizeContext _localctx = new ArrowsizeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arrowsize);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			w_arrowsize();
			setState(163);
			guionb();
			setState(164);
			edno();
			setState(165);
			guionb();
			setState(166);
			elemento();
			setState(167);
			igual();
			setState(168);
			entero();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrowcolorContext extends ParserRuleContext {
		public W_arrowcolorContext w_arrowcolor() {
			return getRuleContext(W_arrowcolorContext.class,0);
		}
		public List<GuionbContext> guionb() {
			return getRuleContexts(GuionbContext.class);
		}
		public GuionbContext guionb(int i) {
			return getRuleContext(GuionbContext.class,i);
		}
		public EdnoContext edno() {
			return getRuleContext(EdnoContext.class,0);
		}
		public ElementoContext elemento() {
			return getRuleContext(ElementoContext.class,0);
		}
		public IgualContext igual() {
			return getRuleContext(IgualContext.class,0);
		}
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public ArrowcolorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrowcolor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterArrowcolor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitArrowcolor(this);
		}
	}

	public final ArrowcolorContext arrowcolor() throws RecognitionException {
		ArrowcolorContext _localctx = new ArrowcolorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arrowcolor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			w_arrowcolor();
			setState(171);
			guionb();
			setState(172);
			edno();
			setState(173);
			guionb();
			setState(174);
			elemento();
			setState(175);
			igual();
			setState(176);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PenwidthContext extends ParserRuleContext {
		public W_penwidthContext w_penwidth() {
			return getRuleContext(W_penwidthContext.class,0);
		}
		public List<GuionbContext> guionb() {
			return getRuleContexts(GuionbContext.class);
		}
		public GuionbContext guionb(int i) {
			return getRuleContext(GuionbContext.class,i);
		}
		public EdnoContext edno() {
			return getRuleContext(EdnoContext.class,0);
		}
		public ElementoContext elemento() {
			return getRuleContext(ElementoContext.class,0);
		}
		public IgualContext igual() {
			return getRuleContext(IgualContext.class,0);
		}
		public EnteroContext entero() {
			return getRuleContext(EnteroContext.class,0);
		}
		public PenwidthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_penwidth; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterPenwidth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitPenwidth(this);
		}
	}

	public final PenwidthContext penwidth() throws RecognitionException {
		PenwidthContext _localctx = new PenwidthContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_penwidth);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			w_penwidth();
			setState(179);
			guionb();
			setState(180);
			edno();
			setState(181);
			guionb();
			setState(182);
			elemento();
			setState(183);
			igual();
			setState(184);
			entero();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FillcolorContext extends ParserRuleContext {
		public W_fillcolorContext w_fillcolor() {
			return getRuleContext(W_fillcolorContext.class,0);
		}
		public List<GuionbContext> guionb() {
			return getRuleContexts(GuionbContext.class);
		}
		public GuionbContext guionb(int i) {
			return getRuleContext(GuionbContext.class,i);
		}
		public EdnoContext edno() {
			return getRuleContext(EdnoContext.class,0);
		}
		public ElementoContext elemento() {
			return getRuleContext(ElementoContext.class,0);
		}
		public IgualContext igual() {
			return getRuleContext(IgualContext.class,0);
		}
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public FillcolorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fillcolor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterFillcolor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitFillcolor(this);
		}
	}

	public final FillcolorContext fillcolor() throws RecognitionException {
		FillcolorContext _localctx = new FillcolorContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fillcolor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			w_fillcolor();
			setState(187);
			guionb();
			setState(188);
			edno();
			setState(189);
			guionb();
			setState(190);
			elemento();
			setState(191);
			igual();
			setState(192);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StyleContext extends ParserRuleContext {
		public W_styleContext w_style() {
			return getRuleContext(W_styleContext.class,0);
		}
		public List<GuionbContext> guionb() {
			return getRuleContexts(GuionbContext.class);
		}
		public GuionbContext guionb(int i) {
			return getRuleContext(GuionbContext.class,i);
		}
		public EdnoContext edno() {
			return getRuleContext(EdnoContext.class,0);
		}
		public ElementoContext elemento() {
			return getRuleContext(ElementoContext.class,0);
		}
		public IgualContext igual() {
			return getRuleContext(IgualContext.class,0);
		}
		public CadenaContext cadena() {
			return getRuleContext(CadenaContext.class,0);
		}
		public StyleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_style; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).enterStyle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gParamParserListener ) ((gParamParserListener)listener).exitStyle(this);
		}
	}

	public final StyleContext style() throws RecognitionException {
		StyleContext _localctx = new StyleContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_style);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			w_style();
			setState(195);
			guionb();
			setState(196);
			edno();
			setState(197);
			guionb();
			setState(198);
			elemento();
			setState(199);
			igual();
			setState(200);
			cadena();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
